--- a/HelloTriangle_ex3/HelloTriangle_ex3.vcxproj
+++ b/HelloTriangle_ex3/HelloTriangle_ex3.vcxproj
@@ -38,8 +38,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{8c535d95-8439-4119-9c4a-917b9e7e7526}</ProjectGuid>
-    <RootNamespace>OpenGLTemplate</RootNamespace>
+    <ProjectGuid>{447e9524-f281-46ee-bb24-024339ab7a17}</ProjectGuid>
+    <RootNamespace>HelloTriangle_ex3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
