--- a/Shaders/Shaders.vcxproj.filters
+++ b/Shaders/Shaders.vcxproj.filters
@@ -15,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\utils\shader_loader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="Libraries\include\glad\glad.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -32,6 +35,9 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\utils\shader_loader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="src\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -43,5 +49,7 @@
     <None Include="src\shaders\cyan.frag" />
     <None Include="src\shaders\orange.frag" />
     <None Include="src\shaders\shader.vert" />
+    <None Include="src\shaders\simple_uniform.frag" />
+    <None Include="src\shaders\color_passthru.frag" />
   </ItemGroup>
 </Project>
