--- a/OpenGLTemplate/OpenGLTemplate.vcxproj.filters
+++ b/OpenGLTemplate/OpenGLTemplate.vcxproj.filters
@@ -914,6 +914,9 @@
     <ClCompile Include="include\glm\glm.cppm">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\stb_image.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\shaders\cyan.frag" />
