Updated openGLTemplate to match lessons learned in Materials Chapter

--- a/OpenGLTemplate/OpenGLTemplate.vcxproj
+++ b/OpenGLTemplate/OpenGLTemplate.vcxproj
@@ -310,6 +310,8 @@
     <ClInclude Include="include\glm\vec3.hpp" />
     <ClInclude Include="include\glm\vec4.hpp" />
     <ClInclude Include="include\glm\vector_relational.hpp" />
+    <ClInclude Include="include\Light.h" />
+    <ClInclude Include="include\Material.h" />
     <ClInclude Include="include\Object.h" />
     <ClInclude Include="include\Shader.h" />
     <ClInclude Include="include\stb_image.h" />
