--- a/OpenGLTemplate/OpenGLTemplate.vcxproj
+++ b/OpenGLTemplate/OpenGLTemplate.vcxproj
@@ -20,7 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Camera.h" />
-    <ClInclude Include="include\Cube.h" />
+    <ClInclude Include="include\game\Game.h" />
+    <ClInclude Include="include\lighting\LightManager.h" />
+    <ClInclude Include="include\objects\Cube.h" />
     <ClInclude Include="include\glm\common.hpp" />
     <ClInclude Include="include\glm\detail\compute_common.hpp" />
     <ClInclude Include="include\glm\detail\compute_vector_decl.hpp" />
@@ -310,10 +312,12 @@
     <ClInclude Include="include\glm\vec3.hpp" />
     <ClInclude Include="include\glm\vec4.hpp" />
     <ClInclude Include="include\glm\vector_relational.hpp" />
-    <ClInclude Include="include\Light.h" />
-    <ClInclude Include="include\Material.h" />
-    <ClInclude Include="include\Object.h" />
-    <ClInclude Include="include\Shader.h" />
+    <ClInclude Include="include\objects\Light.h" />
+    <ClInclude Include="include\lighting\LightProperties.h" />
+    <ClInclude Include="include\graphics\Material.h" />
+    <ClInclude Include="include\objects\Object.h" />
+    <ClInclude Include="include\graphics\Shader.h" />
+    <ClInclude Include="include\objects\Transform.h" />
     <ClInclude Include="include\stb_image.h" />
     <ClInclude Include="Libraries\include\glad\glad.h" />
     <ClInclude Include="Libraries\include\GLFW\glfw3.h" />
@@ -323,9 +327,19 @@
   <ItemGroup>
     <ClCompile Include="include\glm\detail\glm.cpp" />
     <ClCompile Include="include\glm\glm.cppm" />
+    <ClCompile Include="src\Camera.cpp" />
+    <ClCompile Include="src\game\Game.cpp" />
     <ClCompile Include="src\glad.c" />
+    <ClCompile Include="src\light\LightManager.cpp" />
+    <ClCompile Include="src\objects\Cube.cpp" />
+    <ClCompile Include="src\objects\Light.cpp" />
+    <ClCompile Include="src\light\LightProperties.cpp" />
     <ClCompile Include="src\Main.cpp" />
+    <ClCompile Include="src\graphics\Material.cpp" />
+    <ClCompile Include="src\graphics\Shader.cpp" />
+    <ClCompile Include="src\objects\Object.cpp" />
     <ClCompile Include="src\stb_image.cpp" />
+    <ClCompile Include="src\objects\Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="include\glm\detail\func_common.inl" />
